--- a/junaid.html
+++ b/junaid.html
@@ -1,10 +1,10 @@
 <html>
 <body>
 <form>
-<table width="20%" bgcolor="0099CC" align="center">
+<table width="50%" bgcolor="pink" align="leftr">
 
 <tr>
-<td colspan=2><center><font size=4><b>HTML Login Page</b></font></center></td>
+<td colspan=2><center><font size=3><b>HTML Login Page</b></font></center></td>
 </tr>
 
 <tr>
